[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.9.1"
mockall = "0.11.4"
dialog = "0.3.0"
serde = {version = "1.0.193", features = ["derive"]}
toml = "0.8.8"
once_cell = "1.5.2"